Redmine issue 1019: fixing search help --wiki page visibility

--- a/shared/css/bootstrap_override.css
+++ b/shared/css/bootstrap_override.css
@@ -2722,6 +2722,9 @@ div.toctitle {
 .jqx-grid-cell-hover {
 	background: #cbced1 !important;
 }
+.eyelash_button {
+	padding: 3px 0.5rem;
+}
 
 /*******************************
 ********************************
